<?xml version="1.0" encoding="utf-8"?>
<resources>
    <?xml version="1.0"?>
    <string name="app_name">Beergram</string>

    <!--Drawer-->

    <string name="HomeDrawerItemName">Home</string>
    <string name="ProductsDrawerItemName">Products</string>
    <string name="FavouriteDrawerItemName">Favourites</string>
    <string name="CartDrawerItemName">Cart</string>
    <string name="MyAccountDrawerName">My Account</string>
    <string name="NotificationsDrawerName">Notifications</string>
    <string name="AboutUsDrawerItemName">About us</string>
    <string name="LoginLogoutDrawerName">LogIn</string>

    <!--App-->

    <string name="app_title">Babuu</string>
    <string name="baba_says">Baba:</string>
    <string name="baba_speech">What do you want me to knit for you?</string>
    <string name="sweater_text">Sweater</string>
    <string name="socks_text">Socks</string>
    <string name="scarf_text">Scarf</string>

    <!--Sweater Customization-->


    <string name="product_customization_title">Create your custom design</string>
    <string name="product_customization_subtitle">Select the part you want to customize</string>
    <string name="product_customization_size_btn">Size</string>
    <string name="baby_size_0_6">0-6m</string>
    <string name="baby_size_6_12">6m-12m</string>
    <string name="baby_size_12_18">12m-18m</string>
    <string name="baby_size_18_2">18m-2y</string>
    <string name="adult_size_xs">XS</string>
    <string name="adult_size_s">S</string>
    <string name="adult_size_m">M</string>
    <string name="adult_size_l">L</string>
    <string name="adult_size_xl">XL</string>
    <string name="adult_size_xxl">XXL</string>
    <string name="selected_size_text">Selected size:</string>
    <string name="baby_size_0_6_text">Baby 0-6m</string>
    <string name="baby_size_6_12_text">Baby 6m-12m</string>
    <string name="baby_size_12_18_text">Baby 12m-18m</string>
    <string name="baby_size_18_2_text">Baby 18m-2y</string>
    <string name="adult_m_size_xs_text">Male XS</string>
    <string name="adult_m_size_s_text">Male S</string>
    <string name="adult_m_size_m_text">Male M</string>
    <string name="adult_m_size_l_text">Male L</string>
    <string name="adult_m_size_xl_text">Male XL</string>
    <string name="adult_m_size_xxl_text">Male XXL</string>
    <string name="adult_f_size_xs_text">Female XS</string>
    <string name="adult_f_size_s_text">Female S</string>
    <string name="adult_f_size_m_text">Female M</string>
    <string name="adult_f_size_l_text">Female L</string>
    <string name="adult_f_size_xl_text">Female XL</string>
    <string name="adult_f_size_xxl_text">Female XXL</string>
    <string name="email_example_text">Email</string>
    <string name="password_example_text">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="no_account_text">No account yet? Create one</string>
    <string name="forgot_password_text">Forgot your password?</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name_text">First name</string>
    <string name="last_name_text">Last name</string>
    <string name="picture_error_save">Picture not saved</string>
    <string name="picture_saved_successfully">Image saved successflly</string>
    <string name="address_optional_text">Address(Optional)</string>
    <string name="register_btn_text">Register</string>
    <string name="register_form_title_text">Register form</string>
    <string name="login_form_title_text">Login form</string>
    <string name="repeat_password_text">Repeat password</string>
    <string name="user_created_notify_message">" - User successfully created and logged in."</string>
    <string name="user_loggedin_notify_message">" successfully logged in"</string>
    <string name="loading_creating_user_text">Creating user…</string>
    <string name="loading_logging_in_text">Logging in…</string>
    <string name="loading_text">Loading..</string>
    <string name="loading_no_text"/>
    <string name="logout_btn_text">Logout</string>
    <string name="logout_form_title_text">Are you sure you want to logout?</string>
    <string name="loading_logging_out_text">Logging out…</string>
    <string name="address_text">Address</string>
    <string name="search_example_text">Search...</string>
    <string name="bad_email_text">Enter a valid email address</string>
    <string name="bad_first_name_text">Name must be at least 2 symbols</string>
    <string name="bad_last_name_text">Name must be at least 2 symbols</string>
    <string name="reauthentication_message_text">Let us make sure that it is you</string>
    <string name="bad_credentials_message_text">Bad email or password</string>
    <string name="bad_password_text">Enter vali password</string>
    <string name="confirm_text">Confirm</string>
    <string name="cancel_text">Cancel</string>
    <string name="bad_confirm_password_text">Passwords don\'t match</string>
    <string name="save_text">Save</string>
    <string name="personal_info_text">Personal info</string>

    <!--translated to here-->

    <string name="onboarding_first_Screen">Welcome to Babuu\n\nOur cool grannies will make for you the custom sweater, socks or scarf that YOU design</string>
    <string name="onboarding_second_Screen">Create your very own design</string>
    <string name="onboarding_third_Screen">Get it delivered to your doo</string>
    <string name="choose_picture_resource_text">Choose resource</string>
    <string name="learn_as_you_go">Learn more</string>
    <string name="skip_onboarding_btn_text">Skip</string>
    <string name="finish_onboarding_btn_text">Finish</string>
    <string name="or_text">Or</string>
    <string name="get_location_text">Get location on a map</string>
    <string name="make_order_text">Make order</string>
    <string name="delivery_text">Delivery</string>
    <string name="confirm_location_text">Confirm location</string>
    <string name="one">ONE</string>
    <string name="eight">EIGHT</string>
    <string name="five">FIVE</string>
    <string name="four">FOUR</string>
    <string name="nine">NINE</string>
    <string name="seven">SEVEN</string>
    <string name="six">SIX</string>
    <string name="ten">TEN</string>
    <string name="three">THREE</string>
    <string name="two">TWO</string>
    <string name="btn_simple_tabs">Simple Tabs</string>
    <string name="btn_scrollable_tabs">Scrollable Tabs</string>
    <string name="btn_icon_text_tabs">Icon  Text Tabs</string>
    <string name="btn_icon_tabs">Only Icon Tabs</string>
    <string name="btn_pinned_top_tabs">Pinned To Top Tabs</string>


    <string-array name="profile_picture_resource_picker">
        <item>Gallery</item>
        <item>Capture now</item>
    
    </string-array>

    <string name="title_activity_logged">LoggedActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>