<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.leagueofthetwo.babuu.productcustomizations.sweater.SweaterCustomizationFragment">

    <TextView
        android:id="@+id/tv_customization_title"
        style="@style/CustomizationTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_customization_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_choose_size"
            style="@style/CustomizationSizeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/customization_size_btn"
            android:text="@string/product_customization_size_btn" />

        <TextView
            android:id="@+id/tv_selected_size_customization_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/btn_choose_size"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:textColor="@color/colorCoolBlue"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/CustomizationSubtitletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/product_customization_subtitle" />
    </RelativeLayout>


</LinearLayout>
